# OHRA

./: README.md
assets/canonical/: dex_template.jinja2
assets/canonical_extended/: dex_template.jinja2
assets/meta_infos/: allegro_hand_left.json  allegro_hand_right.json  barrett_hand.json  dex3_right.json  gaia_hand_right.json  leap_hand_left.json  leap_hand_right.json  sharpa_wave_right.json
canonical_assets/: dex_template.jinja2
canonical_assets/json/: allegro_hand_right.json  barrett_hand.json  dex3_right.json  gaia_hand_right.json  leap_hand_right.json  sharpa_wave_left.json
src/IsaacGym/: controller.py  (+2 more)
src/assets/robot_urdf/sharpa_wave/right_sharpa_wave/: CMakeLists.txt  package.xml  right_sharpa_wave.urdf  right_sharpa_wave.usda  right_sharpa_wave.xml
src/assets/robot_urdf/sharpa_wave/right_sharpa_wave/config/: joint_names_Right_Sharpa_HA4.yaml  sharpa.rviz
src/assets/robot_urdf/sharpa_wave/right_sharpa_wave/launch/: display.launch.py  gazebo.launch.py
src/assets/robot_urdf/sharpa_wave/right_sharpa_wave/meshes/: right_hand_C_MC_visual.STL  right_pinky_MC_visual.STL
src/assets/robot_urdf/sharpa_wave/right_sharpa_wave/right_sharpa_wave/: right_sharpa_wave.usd
src/assets/robot_urdf/sharpa_wave/right_sharpa_wave/right_sharpa_wave/configuration/: right_sharpa_ha4_v2_1_physics.usd  right_sharpa_ha4_v2_1_robot.usd  right_sharpa_ha4_v2_1_sensor.usd  right_sharpa_wave_physics.usd  right_sharpa_wave_robot.usd  right_sharpa_wave_sensor.usd
utils/: hand_model.py  rotation.py  urdf_parser.py  urdf_render.py
visualization/: vis_compare.py  vis_hand.py
(+684 files in other folders)
